# epd-bootscreen

./: Cargo.toml  LICENCE.md  README.md  epd-bootscreen.service
src/: color.rs  draw.rs  emulator.rs  epd.rs  main.rs  tri_color.rs  tri_display.rs
