[package]
name = "epd-bootscreen"
version = "0.1.0"
authors = ["Reinier Balt <lrbalt@gmail.com>"]
edition = "2018"

[features]
emulator = ["embedded-graphics-simulator"]
e-paper = ["epd-waveshare", "linux-embedded-hal"]
default = ["emulator"]

[dependencies]
clap = { version = "3.1.16", default-features = false, features = [
    "derive",
    "std"
] }
log = "0.4.17"
env_logger = "0.10.0"
embedded-graphics = { version= "0.8.1" }
profont = "0.7.0"
chrono = "0.4.19"
embedded-graphics-simulator = { version = "0.5.0", optional = true }
epd-waveshare = { version = "0.5.0", optional = true }
linux-embedded-hal = { version = "0.3.2", optional = true }
