[package]
name = "epd-bootscreen"
version = "0.1.1"
authors = ["Reinier Balt <lrbalt@gmail.com>"]
edition = "2021"

[features]
emulator = ["embedded-graphics-simulator"]
e-paper = ["epd-waveshare", "linux-embedded-hal"]
default = ["emulator"]

[dependencies]
clap = { version = "4.5.26", default-features = false, features = [
    "derive",
    "std"
] }
log = "0.4.22"
env_logger = "0.11.6"
embedded-graphics = { version= "0.8.1" }
profont = "0.7.0"
chrono = "0.4.39"
embedded-graphics-simulator = { version = "0.7.0", optional = true }
epd-waveshare = { version = "0.6.0", optional = true }
linux-embedded-hal = { version = "0.4.0", optional = true }
